openshift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend-deployment
 labels:
  app: skill-hire
  tier: frontend

spec:
 replicas: 2
 selector:
  matchLabels:
    app: skill-hire
    tier: frontend
 template:
   metadata:
     labels:
      app: skill-hire
      tier: frontend

   spec:
    containers:
    - name: frontend
      image: moulisaideep/skill-hire-frontend:latest
      ports:
      - containerPort: 80
      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "200m"
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 30
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
