openshift/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: skill-hire
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skill-hire
      tier: database
  template:
    metadata:
      labels:
        app: skill-hire
        tier: database
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-storage 
          persistentVolumeClaim:
            claimName: mongodb-pvc
