openshift/skill-hire-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skill-hire-deployment
  labels:
    app: skill-hire
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skill-hire
      tier: backend
  template:
    metadata:
      labels:
        app: skill-hire
        tier: backend
    spec:
      containers:
      - name: skill-hire
        image: moulisaideep/skill-hire:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
