openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend-service
 labels:
   app: skill-hire
   tier: frontend

spec:
 ports:
   - port: 80
     targetPort: 80
 selector:
  app: skill-hire
  tier: frontend
 type: ClusterIP
