openshift/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: skill-hire
    tier: database
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: skill-hire
    tier: database 
clusterIP: None
