openshift/skill-hire-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skill-hire-service
  labels:
    app: skill-hire
    tier: backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: skill-hire
    tier: backend
  type: ClusterIP
