openshift/skill-hire-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: skill-hire-route
  labels:
    app: skill-hire
spec:
  to:
    kind: Service
    name: skill-hire-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
